Prevent repeated VRDisplay.requestPresent calls from spamming the device

With this patch new requestPresent calls that are made while the first one is
still pending will simply be queued up Blink-side and all resolved at once when
the original request succeeds or fails.

BUG=670441

Review-Url: https://codereview.chromium.org/2550863002
Cr-Commit-Position: refs/heads/master@{#436132}

Former-commit-id: dd2fff71ca63ff58973e36c6f411a78f04bcc7fb